Layout bug fix, icon size.

--- a/public/styles/modules/recipe-main-content.less
+++ b/public/styles/modules/recipe-main-content.less
@@ -1,5 +1,27 @@
 .m-recipe-main-content {
   > .active {
+    margin-bottom: @spacing-l2;
+
+    .icon {
+      font-size: @font-size-l3;
+
+      &.rmcm-zoom {
+        font-size: inherit;
+      }
+    }
+
+    .rm-count {
+      font-size: @font-size-l3;
+
+      margin-right: @spacing-s1;
+
+      vertical-align: middle;
+    }
+
+    .m-recipe-steps {
+      margin-top: @spacing-l1;
+    }
+
     .rm-list {
       font-size: @font-size-l3;
 
@@ -7,10 +29,6 @@
         margin-top: @spacing-s1;
         margin-bottom: @spacing-s1;
       }
-    }
-
-    .m-recipe-steps {
-      margin-top: @spacing-l1;
     }
   }
 }
